/*
Copyright zhigui Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option java_package = "org.fabric-sdk-go.protos";
option go_package = "fabric-sdk-go/protos";

package protos;

// Interface exported by the server.
service Channel {
    rpc CreateChannel (CreateChannelRequest) returns (CreateChannelResponse) {}
}

message CreateChannelRequest {
    string channel_id = 1;
}

message CreateChannelResponse {
    int32 status = 1;
    string transaction_id = 2;
}
